# CatBot

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: consts.py  script.py  utils.py
