[tool.poetry]
name = "catbot"
version = "0.1.0"
description = "Telegram bot to send bi-daily messages to remind WG members to feed the cat"
authors = ["Clément Sicard <clement.sicard@icloud.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
telepot = "^12.7"
loguru = "^0.6.0"
pytz = "^2022.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
